plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'org.berber'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.3.1'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.3.1'

    implementation group: 'com.h2database', name: 'h2', version: '2.2.224'
    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'

    implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.3'
    implementation 'org.postgresql:postgresql:42.7.3'


    testImplementation group: 'junit', name: 'junit', version: '4.5'
    implementation 'junit:junit:4.13.1'
    testImplementation('org.springframework.boot:spring-boot-starter-test')


    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'



}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading")
}
